# leetcode

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  create_exercise.py
13.roman-to-integer/: functions.h
14. longer-common-prefix/: functions.cpp
1480. Running Sum of 1d Array/: tests.cpp
2.add-two-numbers/: main.cpp
20. valid-parentheses/: test.cpp
20.valid-parentheses/: test-program
22. merge-two-sorted-lists/: functions.cpp  functions.h
22.MergedTwoSortedLists/: main.cpp
26.RemoveSuplicatesfromSortedArray/: main.cpp
26.remove-duplicate-from-sorted-array/: tests.cpp
26.remove-duplicates-from-sorted-array/: functions.cpp  functions.h  program  test
27. Remove Element/: main.cpp  test.cpp
27.remove-element/: functions.cpp  functions.h  program  test
28.FindtheIndexoftheFirstOccurrenceinaString/: main.cpp
66. plus-one/: functions.cpp  program  tests.cpp
66.PlusOne/: tests
66.plus-one/: main.cpp
724. Find Pivot Index/: functions.cpp
724.find-pivot-index/: main.cpp
88.MergeSortedArray/: main.cpp
9. palindrome-number/: main.cpp
9.PalindromeNumber/: functions.h
exercises/1.TwoSum/: tests.cpp
exercises/1004.MaxConsecutiveOnes_3/: approach.md  functions.cpp  functions.h  main.cpp  test.cpp
exercises/1071.GreatestCommonDivisorofStrings/: approach.md  functions.cpp  functions.h  main.cpp  test.cpp
exercises/11.ContainerWithMostWater/: approach.md  functions.cpp  functions.h  main.cpp  test.cpp
exercises/1207.UniqueNumberOfOccurences/: approach.md  functions.cpp  functions.h  main.cpp  test.cpp
exercises/128.LongestConsecutiveSequence/: functions.cpp  functions.h  main.cpp  test.cpp
exercises/13.RomanToInteger/: approach.md  test.cpp
exercises/14.LongestCommonPrefix/: approach.md  functions.cpp  functions.h  test.cpp
exercises/1431.KidsWiththeGreatestNumberofCandies/: functions.cpp  functions.h  main.cpp  test.cpp
exercises/1456.MaximumNumberOfVowelsInASUbstringOfGivenLenght/: approach.md  functions.cpp  functions.h  main.cpp  test.cpp
exercises/1493.LongestSubarrayOf1sAfterDeletingOneElement/: approach.md  functions.cpp  functions.h  main.cpp  test.cpp
exercises/151.ReverseWordsInAString/: functions.cpp  functions.h  main.cpp  test.cpp
exercises/1657.DetermineIfTwoStringsAreClose/: approach.md  functions.cpp  functions.h  main.cpp  test.cpp
exercises/1679.MaxNumberOfK-SumPairs/: approach.md  functions.cpp  functions.h  main.cpp  test.cpp
exercises/1768.MergeStringsAlternately/: functions.cpp  functions.h  main.cpp  test.cpp
exercises/2.AddTwoNumbers/: main.cpp
exercises/20.ValidParentheses/: approach.md  functions.cpp  functions.h
exercises/206.ReverseLinkedList/: approach.md  functions.cpp  functions.h  main.cpp  test.cpp
exercises/2095.DeleteTheMiddleNodeOfALinkedList/: approach.md  functions.cpp  functions.h  main.cpp  test.cpp
exercises/2130.MaximumTwinSumofaLinkedList/: approach.md  functions.cpp  functions.h  main.cpp  test.cpp
exercises/2215.FindTheDifferenceOfTwoArrays/: approach.md  functions.cpp  functions.h  (+2 more)
find-pivot-index/: functions.h  tests.cpp
isomorphic-strings/: main.cpp
longer-common-prefix/: functions.h  longest_prefix  main  main.cpp
merge-two-sorted-lists/: functions.cpp
palindrome-number/: functions.cpp
roman-to-integer/: functions.cpp  main.cpp  roman
running-sum-of-1d-array/: functions.cpp  functions.h  main.cpp
two-sum/: functions.cpp  functions.h  main.cpp
valid-parentheses/: functions.cpp  functions.h  main.cpp  program  test.cpp
(+91 files in other folders)
